	持ち物タブのheightの調整
	持ち物タブのラジオボタンのキャプションがlabelで示されていなかった点を修正
	ページタブのページ名を、h1からspanに変更
	ページデータのルビ振りを実装
	画像ファイル等の扱いを用意にするフォルダ配置の設計
	新しい色合い「月見」

2020.10.3	v1_0
	「再ロード」ボタンの追加
	横幅の調節
	ReadMeでページデータの作成方法、セーブデータの見方を追加
	新しい色合い「栗」

2020.10.17 v2_0
	ページ説明(e:)の改行(<br>)を、「^」を書くことで簡略化できるように
	12個の番号配列を追加。フラグの補助に。
	番号配列にまつわる関数:wnum(書き込む, 内容), rnum(読み込む), nminn(引かれる番号,引く番号), nminx(引かれる番号,引く値), naddn(足される番号,足す番号), naddx(足される番号,足す値)
	数学にまつわる関数:rand()(乱数発生：Math.random), flor(x)(整数化：Math.floor), ceil(x)(整数化：Math.ceil)
	document.getElementById(~).innerHTML=...　を「gebi(~, ...)」ともかけるように
	
2020.10.30 v2_1
	改行コードの統一(\r\n および \rは、内部で\nに統一される)
	左・中央・右揃えの調節
	新しい色合い「きんもくせい」「ハロウィン」
	ファビコンの追加
	
2020.12.24 v2_2
	新しい色合い「クリスマス」「謹賀新年」
	ボタン位置を上から吊り下げる形に変更（「Tsuri.css」）
	
2021.4.2	v3_0
	新しい色合い「夜桜」「星座」
	ファイル選択と設定/描写と道具を隣接させた
	描写における選択肢の幅を文字幅に合わせた（これまでは横幅いっぱい）
	設定に、道具欄の非表示、作者のリードミーの表示を追加（リードミーは、道具が何も登録されていない場合は表示されない）（以後、原則として<item>内部に登録する"一番最後"にはリードミー用の文章を用意する必要がある）
2021.5.29	v4_0
	新しい色合い「湖の四季の記憶」「羽化を待つ蛹」「新茶の季節」「儚さと強さのキメラ」
	「クリスマス」「ハロウィン」の色合いを一部変更
	色合いのグループ化（ライト・ダーク）
	「もとに戻す」の追加（配列名breadcrumbsによる、セーブデータの蓄積。movでunshift、「もとに戻す」ボタン押下でshift）
	v(view)要素の追加。内容はe要素と同様で、「v:アイテム番号」　とすることで、アイテムの説明文を描写部にかくことができる。画像を用いた情景表示が狙い。
	BF記法を読み取れるようにした。BTAPかBFかの判別は、前者のマップタグが<map:~>、校舎が<BFmap:~>
2021.10.21
	色の詳細設定

2021.10.27
	ハイパーリンクを扱う<hl>タグを追加。押下することでスクリプトを実行できる。
	OpenInlineTag関数の追加。ルビやハイパーリンクのBTAP-HTML変換に当たるコードの可読性向上。
	大陸シリーズの辞書となるDictionaryページの追加。

2022.1.24
	「ページデータファイルを選択してください」の追加。BTAPと同様に外部の.txtファイルによりページデータが選択できる。
	横幅「描写部大きく」の追加。描写部の横幅と縦幅が結構おおきくなる
	「上方向ページ積み」によりページを上方向に積めるようになった
	ページデータのJSON化

2022.2.23
	SimpleBTAPの追加。単純にした。
	それに伴い、script_SimpleBTAP.jsを制御スクリプトとして使用。

2022.4.17
	戻る、スキップのコマンドボタンを上部に設置。Script.js、Tsuri.cssを変更
	「戻る」はこれまでのremov関数。スキップは、選択肢が１つだけのページは自動的にその次へスキップする（複数選択肢のあるページ・選択肢なしページまでスキップする。）

2022 4.24
	すべての色合いの見直し（色調、Tsuri.cssと色付けcssとで担うべき要素の移し替え）
	ハイパーリンク(hl)のアンダーラインの色を文字色と同色に変更(Tsuri.css)
	SimpleBTAPの道具欄を改行して表示	

2022 4.29
	シンプルで構造的なResponsiveBTAPを追加。script_ResponsiveBTAP.jsの追加。
	index.htmlにリンクを張った。