@@ -35,7 +35,7 @@ header {
 }
 
 .tool_button{
-  background-color: #000000;
+  background-color: #303030;
   color:#eaeaea;
 }
 
