@@ -15,9 +15,13 @@
 <body>
 
 	<header id="header">
-		<!-- <h1>BTAP4</h1> -->
 		<nav>
 			<ul>
+                <!-- <li onclick="tab_close()" id="li_tabclosing" class="non-active_li">
+                </li> -->
+
+				<!-- <li onclick="tab_close()" class="non-active_li">
+                    <img src="tab_yajirushi.png" id="tab_yajirushi" class="yajirushi_close"/></li> -->
 				<li onclick="change_li(0)" id="li_setting" class="non-active_li">設定</li>
 				<li onclick="change_li(1)" id="li_select" class="active-li">選択</li>
 				<li onclick="change_li(2)" id="li_page" class="non-active_li">ページ</li>
@@ -25,17 +29,14 @@
 		</nav>
 	</header>
 
-	<!-- <div id="tab_close" class="tool_button tab_close" onclick="tab_close()">↑タブ</div> -->
+
   <!-- ページを選択する欄================================================================ -->
 
-
 	<div class="ran" style="display:block;text-align:center;" id="ran_select">
-		<p>
-			<span style="font-size: large;font-weight: bold;">
-                下の表でページを選択してください。選択後、「ページ」タブに遷移し、閲覧を開始できます。
-            </span>
+		<p style="font-size: 1.1em;font-weight: bold;">
+            下の表でページを選択してください。選択後「ページ」タブに遷移します。
         </p>
-        <p>
+        <p style="font-size: 0.8em">
             デフォルトでは、最近作ったものから順に並んでいます（降順-作成順）。<br>
             また「シリーズ」「時系列」は目安であり、厳密な規定はありません。
 		</p>
@@ -55,6 +56,7 @@
 				</select>
 			</label>
 		</p>
+
 		<table class="page_sel_table" id="page_sel_table">
 			<tr>
 				<th>ページ名</th>
@@ -107,23 +109,16 @@
   <!-- 設定欄================================================================ -->
 	<div class="ran" id="ran_setting">
     <h2>ページの表示設定</h2>
-    <p>
-      <label>ページの横幅を制限する<br>
-        <input type="checkbox" id="chb_yokohaba" onchange="change_yokohaba()"/>横幅を制限する
-      </label>
-    </p>
 
     <p>
-      <label>ページを左揃えにする<br> <!-- 中央揃えにする、の間違い -->
-        <input type="checkbox" id="chb_align_left" onchange="change_align_left()"/>左揃えにする
+      <label>表示を中央揃え／左揃えにする<br>
+        <input type="checkbox" id="chb_align_center" onchange="change_align_center()"/>中央揃えにする
       </label>
     </p>
-    <!-- <p>
-			（ページの横幅を制限し、左揃えにすると、旧版と同じ見た目となります）
-		</p> -->
 
         <p>
             <label>横幅の調整（ディスプレイの横幅に占める%。可読性確保のため、横幅が狭すぎる(360px未満)場合、見た目が変化しません。）<br>
+            <!-- 以下の、min or max or value を変更した場合、change_ranwidthも変更すること！-->
             <input type="range" id="ran_width_range" min="25" max="100" value="60" step="1"
                  onchange="change_ranwidth(this.value)">
             <input type="number" id="ran_width_number" min="25" max="100" value="60" step="1"
@@ -133,9 +128,9 @@
 		<p>
 			<label>ページのフォントサイズの変更<br>
             <!-- 以下の、min or max or value を変更した場合、change_fontsize()も変更すること！-->
-			<input type="range" id="fontsize_range" min="12" max="30" value="16" step="1"
+			<input type="range" id="fontsize_range" min="12" max="30" value="18" step="1"
              onchange="change_fontsize(this.value)">
-            <input type="number" id="fontsize_number" min="12" max="30" value="16" step="1"
+            <input type="number" id="fontsize_number" min="12" max="30" value="18" step="1"
              onchange="change_fontsize(this.value)">
             <br>
             <span id="reibun">フォントサイズ確認サンプル文章</span>
@@ -170,9 +165,6 @@
     </p>
 	</div>
 
-
-
-
   <!-- ページ欄================================================================ -->
 
 	<div class="ran" id="ran_page">
@@ -180,6 +172,9 @@
     <div style="width:100%;display:inline-block" id="desc_and_item">
 
       <div id="button_redo_and_skip" style="display:none;width:100%; text-align:right;">
+          <div id="tab_close" class="tool_button tab_close" onclick="tab_close()">
+                <img src="tab_yajirushi.png" id="tab_yajirushi" class="yajirushi_close"/>
+            </div>
         <div class="tool_button redo_and_skip" onclick="remov()">戻る</div>
         <div class="tool_button redo_and_skip" onclick="pageskip()">スキップ</div>
       </div>
