@@ -1,17 +1,19 @@
 body{
   font-family: 'Noto Sans JP', 'Yu Gothic Medium', '游ゴシック Medium', sans-serif;
-  /* text-align:center; */
-	font-size: 18px;
+  font-size: 18px;
 }
 
 h1{
   margin:0px;
 }
 
+/* =========================================================== */
+/* タブ */
 header {
+  z-index: 2;   /* tabを開閉するスイッチよりも前に置く */
   text-align: center;
-  position: fixed;
-  top: 0;
+  position: fixed;  /* スクロールしても固定 */
+  top: -1px;
   left: 0;
   right: 0;
 }
@@ -19,7 +21,6 @@ header {
 nav ul {
   display: flex;
   height: 50px;
-  /* justify-content: center; */
   list-style: none;
   padding: 0;
   margin: 0;
@@ -32,55 +33,60 @@ nav ul li {
 }
 
 nav ul li:first-of-type{
-  border-top: white solid 1px;
+  /* border-top: white solid 1px; */
   border-right: white solid 1px;
 }
 
 
-nav ul li:nth-of-type(2){
+/* nav ul li:nth-of-type(2){
   border-top: white solid 1px;
-}
+} */
 
 nav ul li:last-of-type{
-  border-top: white solid 1px;
+  /* border-top: white solid 1px; */
   border-left: white solid 1px;
 }
 
+/* =========================================================== */
 /* 欄 */
 .ran{
     display: none;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 60px; /* タブに被らせない */
+    margin-left: auto;  /*　中央揃え　*/
+    margin-right: auto; /*　中央揃え　*/
     width: 60%;
     min-width: 360px;   /* iPhone8の画面の横幅 */
 	padding: 0px;
 }
 
 .ran_without_header{
-  margin-top: 0px;
+  margin-top: 0px;  /* タブがないので被りを考慮しない */
 }
+
+/* =========================================================== */
 /*ページの選択肢*/
 .li_sel{
   font-weight: bold;
   text-decoration: underline;
-	font-size: 150%;
+  font-size: 150%;
 }
 
-/* ページ選択用テーブルのtd */
+/* =========================================================== */
+/* ページ選択用テーブル */
 .page_sel_table{
   border-collapse:collapse;
-	margin:auto;
+  margin:auto;
 }
 
 .page_sel_table tr td{
   padding:5px;
-
 }
+
 .page_sel_table tr th{
   padding:3px;
 }
 
+/* =========================================================== */
 /* コマンドボタン */
 .tool_button{
   padding: 5px;
@@ -88,6 +94,7 @@ nav ul li:last-of-type{
   display: inline-block;
 }
 
+/* 戻す＆スキップ */
 .redo_and_skip{
   width: 5em;
   margin: 0px;
@@ -95,56 +102,100 @@ nav ul li:last-of-type{
   text-align:center;
 }
 
+/* アイテムを表示 */
 .openitem{
-	margin-top:2em;
+  margin-top:2em;
   width: 12em;
   text-align: center;
   display: none;
 }
 
+/* タブを閉じる */
 .tab_close{
-  position: fixed;
-  top: 6;
+  z-index: 1;   /* 上のheaderよりも後ろに出す*/
+  /* background-color: #808080; */
+  position: absolute;
+  top: 0;
   left: 0;
   right: 0;
-	width:3.5em;
-	border: #FFFFFF solid 1px;
+  width:1.8em;
+  text-align: center;
+  /* border: #FFFFFF solid 1px; */
+  /* border-top:none; */
+  margin-top:-3px;
+  padding-top:68px;
 }
 
-.page_title{
-  margin:15px;
+/* タブを開ける */
+.tab_open{
+  z-index: 1;   /* 上のheaderよりも後ろに出す*/
+  /* background-color: #808080; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width:1.8em;
+  text-align: center;
+  /* border: #FFFFFF solid 1px;
+  border-top:none; */
+  margin-top:-3px;
+  padding-top:16px;
 }
+
+/* タブを閉じるときの矢印の画像 */
+.yajirushi_close{
+    transform: scaleY(1);
+    height:1.0em;
+}
+
+/* タブを開けるときの矢印の画像 */
+.yajirushi_open{
+    transform: scaleY(-1);
+    height:1.0em;
+}
+
+
+/* =========================================================== */
+/* .page_title{
+  margin:20px;
+} */
 
 /*ハイパーリンクのテキスト*/
 .hl-border{
   font-weight: bold;
 }
 
+/* =========================================================== */
 /* テーブルのセルの色 */
 .series_color_tag{
   padding: 3px;
 }
 
+/* =========================================================== */
+/* メタ */
 .meta{
   background-color:#fdeaea;
   border: #e56565 solid 2px;
   color:#ee0000;
 }
-
+/* 多様 */
 .variation{
 	background-color:#243444;
 	color:#fdfdff;
 }
-
+/* ミンダ前編 */
 .minda1{
 	background-color:#f4eaff;
 	color:#000000;
 }
+
+/* ミンダ後編 */
 .minda2{
 	background-color:#ad301c;
 	color:#EEEEEE;
 }
 
+/* サナ */
 .sana{
   background-color: #c9f0ff;
   color:#1b0313;
