@@ -74,3 +74,13 @@ BTAPの編集履歴
 2022 4.29
 	シンプルで構造的なResponsiveBTAPを追加。script_ResponsiveBTAP.jsの追加。
 	index.htmlにリンクを張った。
+	
+（この間記録忘れ。メジャーアップデート挟む）
+
+2024 3.13　BTAP5.1　と、ひとまずしておく。
+	可読性の向上
+	「BTAP4」を消す。「タブ」は場所を移動させる
+	hover要素を追加し、ボタンであることをわかりやすくした
+	デフォルトを左揃え、画面幅60%にし、調整するためのinput要素を追加
+	色合いの調整
+	
